# my_langgraph

./: .gitignore  README.md  graph.py  graphrag.py  langgraph.json  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
agents/: __init__.py  db_agent.py
agents/tools_schema/: __init__.py  db_agent_tool.py
core/: base.py
core/fake_db/: fake_base1.py
models/: chat_models.py  embeddings.py  image_models.py
modules/: file_parser.py
modules/crawler/: wechat.py
modules/video/: video_generate.py  video_utils.py
prompt/: prompt.json
services/: briefnet_service.py
tools/: __init__.py  code_tools.py  config.json  image_tools.py  mcp_tools.py  search_tools.py  system_tools.py  weather_tools.py
tools/mcp/: math.py
utils/: __init__.py  decorator.py  download.py  format_utils.py  tencent_cos.py
