[project]
name = "my-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipython>=8.37.0",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.5",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-sqlite>=3.0.1",
    "pillow>=12.0.0",
    "pip>=25.3",
    "uv>=0.9.18",
]
